Merch Carousel buttons get bigger on mobile and fixed scroll bug

--- a/src/Pages/Merch/Stylesheets/MerchCarousel.css
+++ b/src/Pages/Merch/Stylesheets/MerchCarousel.css
@@ -21,10 +21,6 @@
   top: 50%;
 }
 
-.slick-prev::before, .slick-next::before {
-  font-size: 30px;
-}
-
 .slick-prev {
   left: 5%;
 }
@@ -37,6 +33,10 @@
   z-index: -1;
 }
 
+.slick-slider {
+  z-index: 0;
+}
+
 .image-slide {
   height: clamp(200px, 70vw, 400px); 
 }
@@ -46,4 +46,10 @@
   object-position: center;
   height: 100%;
   width: 100%;
+}
+
+@media screen and (max-width: 1000px) {
+  .slick-prev::before, .slick-next::before {
+    font-size: 30px;
+  }
 }
